<resources>
  <string name="app_name">AnimationTest</string>
  <string name="start_label">Start</string>
  <string name="stop_label">Stop</string>

  <!-- ValueAnimator test labels-->
  <string name="end_value_label">End value (max 1000)</string>
  <string name="duration_value_label">Duration (max 1000 ms)</string>

  <!-- FrameAnimation test-->
  <string name="frame_animation_label">Frame Animation</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="add_view">ADD VIEW</string>
  <string name="remove_view">REMOVE VIEW</string>
  <string name="enable_layouttransition">Enable LayoutTransition</string>
  <string name="view_state_animated">View State Animated</string>
</resources>
