<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
  <CheckBox
      android:text="@string/enable_layouttransition"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/layoutTransitionCheckbox"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <Button
        android:id="@+id/addViewButton"
        android:text="@string/add_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/remove_view"
        android:id="@+id/removeViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout
      android:orientation="horizontal"
      android:background="@color/container_bg"
      android:id="@+id/container"
      android:animateLayoutChanges="true"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
</LinearLayout>