<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/end_value_label"
      android:layout_gravity="center"/>

  <SeekBar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/endSeekBar"
      android:max="@integer/duration_max_value"
      android:layout_gravity="center"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/duration_value_label"
      android:layout_gravity="center"/>

  <SeekBar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/durationSeekBar"
      android:max="@integer/number_max_value"
      android:layout_gravity="center"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/start_label"
      android:id="@+id/startButton"
      android:layout_gravity="center"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:id="@+id/outputValue"
      android:textSize="40sp"
      android:gravity="center"
      android:layout_gravity="center"/>

</LinearLayout>